--- a/simulator/DNP3/DefaultOutstationPlugin/DefaultOutstationPlugin.csproj
+++ b/simulator/DNP3/DefaultOutstationPlugin/DefaultOutstationPlugin.csproj
@@ -70,33 +70,47 @@
     <Compile Include="GUI\AnalogValueDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\AnalogValueDialog.Designer.cs" />
+    <Compile Include="GUI\AnalogValueDialog.Designer.cs">
+      <DependentUpon>AnalogValueDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\BinaryValueDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\BinaryValueDialog.Designer.cs" />
+    <Compile Include="GUI\BinaryValueDialog.Designer.cs">
+      <DependentUpon>BinaryValueDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\CommandHandlerControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="GUI\CommandHandlerControl.Designer.cs" />
+    <Compile Include="GUI\CommandHandlerControl.Designer.cs">
+      <DependentUpon>CommandHandlerControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\CounterValueDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\CounterValueDialog.Designer.cs" />
+    <Compile Include="GUI\CounterValueDialog.Designer.cs">
+      <DependentUpon>CounterValueDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\DoubleBinaryValueDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\DoubleBinaryValueDialog.Designer.cs" />
+    <Compile Include="GUI\DoubleBinaryValueDialog.Designer.cs">
+      <DependentUpon>DoubleBinaryValueDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\OutstationForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\OutstationForm.Designer.cs" />
+    <Compile Include="GUI\OutstationForm.Designer.cs">
+      <DependentUpon>OutstationForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="OutstationInstance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GUI\QualitySelector.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="GUI\QualitySelector.Designer.cs" />
+    <Compile Include="GUI\QualitySelector.Designer.cs">
+      <DependentUpon>QualitySelector.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\SimulatorAPI\ModuleAPI.csproj">
@@ -125,7 +139,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
