--- a/simulator/DNP3/DEROutstationPlugin/DEROutstationPlugin.csproj
+++ b/simulator/DNP3/DEROutstationPlugin/DEROutstationPlugin.csproj
@@ -49,6 +49,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnalogValueDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AnalogValueDialog.Designer.cs">
+      <DependentUpon>AnalogValueDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="BinaryValueDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BinaryValueDialog.Designer.cs">
+      <DependentUpon>BinaryValueDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CommandHandlerControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CommandHandlerControl.Designer.cs">
+      <DependentUpon>CommandHandlerControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CounterValueDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CounterValueDialog.Designer.cs">
+      <DependentUpon>CounterValueDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DoubleBinaryValueDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DoubleBinaryValueDialog.Designer.cs">
+      <DependentUpon>DoubleBinaryValueDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="OutstationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,6 +87,12 @@
     </Compile>
     <Compile Include="OutstationInstance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QualitySelector.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="QualitySelector.Designer.cs">
+      <DependentUpon>QualitySelector.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Commons\Commons.csproj">
@@ -73,8 +109,26 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="AnalogValueDialog.resx">
+      <DependentUpon>AnalogValueDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="BinaryValueDialog.resx">
+      <DependentUpon>BinaryValueDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CommandHandlerControl.resx">
+      <DependentUpon>CommandHandlerControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CounterValueDialog.resx">
+      <DependentUpon>CounterValueDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DoubleBinaryValueDialog.resx">
+      <DependentUpon>DoubleBinaryValueDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="OutstationForm.resx">
       <DependentUpon>OutstationForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="QualitySelector.resx">
+      <DependentUpon>QualitySelector.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
