--- a/simulator/Commons/Commons.csproj
+++ b/simulator/Commons/Commons.csproj
@@ -65,6 +65,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\AnalogInput.cs" />
+    <Compile Include="Configuration\AnalogOutput.cs" />
+    <Compile Include="Configuration\BinaryInput.cs" />
+    <Compile Include="Configuration\BInaryOutput.cs" />
+    <Compile Include="Configuration\Configuration.cs" />
+    <Compile Include="Configuration\IndexMap.cs" />
     <Compile Include="ILog.cs" />
     <Compile Include="LogFormatter.cs" />
     <Compile Include="LogMultiplexer.cs" />
