move Configuration class to DNPCommons, read when OutstationStackConfig is accessed

--- a/simulator/DNP3/DEROutstationPlugin/DEROutstationPlugin.csproj
+++ b/simulator/DNP3/DEROutstationPlugin/DEROutstationPlugin.csproj
@@ -37,6 +37,10 @@
     <Reference Include="DNP3CLRInterface">
       <HintPath>..\..\..\packages\opendnp3.2.1.0-RC6\lib\net45\DNP3CLRInterface.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -130,6 +134,9 @@
     <EmbeddedResource Include="QualitySelector.resx">
       <DependentUpon>QualitySelector.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
