--- a/simulator/DNP3/DNP3Commons/DNP3Commons.csproj
+++ b/simulator/DNP3/DNP3Commons/DNP3Commons.csproj
@@ -67,12 +67,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\BinaryIndexMap.cs" />
     <Compile Include="Configuration\AnalogInput.cs" />
     <Compile Include="Configuration\AnalogOutput.cs" />
     <Compile Include="Configuration\BinaryInput.cs" />
     <Compile Include="Configuration\BInaryOutput.cs" />
     <Compile Include="Configuration\Configuration.cs" />
-    <Compile Include="Configuration\IndexMap.cs" />
+    <Compile Include="Configuration\AnalogIndexMap.cs" />
     <Compile Include="EventedOutstationApplication.cs" />
     <Compile Include="GUI\DBListView.cs">
       <SubType>Component</SubType>
