--- a/simulator/DNP3/DNP3Commons/DNP3Commons.csproj
+++ b/simulator/DNP3/DNP3Commons/DNP3Commons.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Configuration\BInaryOutput.cs" />
     <Compile Include="Configuration\Configuration.cs" />
     <Compile Include="Configuration\AnalogIndexMap.cs" />
+    <Compile Include="Configuration\Counter.cs" />
     <Compile Include="EventedOutstationApplication.cs" />
     <Compile Include="GUI\DBListView.cs">
       <SubType>Component</SubType>
