--- a/simulator/DNP3/DNP3Commons/DNP3Commons.csproj
+++ b/simulator/DNP3/DNP3Commons/DNP3Commons.csproj
@@ -56,6 +56,10 @@
       <HintPath>..\..\..\packages\opendnp3.2.1.0-RC6\lib\net45\DNP3CLRInterface.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
