fix MeasurementView in DNP3Commons.csproj

--- a/simulator/DNP3/DNP3Commons/DNP3Commons.csproj
+++ b/simulator/DNP3/DNP3Commons/DNP3Commons.csproj
@@ -87,7 +87,9 @@
     <Compile Include="GUI\MeasurementView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="GUI\MeasurementView.Designer.cs" />
+    <Compile Include="GUI\MeasurementView.Designer.cs">
+      <DependentUpon>MeasurementView.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\TransparentButton.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -108,7 +110,9 @@
     <Compile Include="ProxyLoader.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="GUI\MeasurementView.resx" />
+    <EmbeddedResource Include="GUI\MeasurementView.resx">
+      <DependentUpon>MeasurementView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\TransparentButton.resx">
       <DependentUpon>TransparentButton.cs</DependentUpon>
     </EmbeddedResource>
@@ -117,7 +121,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
