update DBListView in DNP3Commons.csproj

--- a/simulator/DNP3/DNP3Commons/DNP3Commons.csproj
+++ b/simulator/DNP3/DNP3Commons/DNP3Commons.csproj
@@ -83,7 +83,9 @@
     <Compile Include="GUI\DBListView.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="GUI\DBListView.Designer.cs" />
+    <Compile Include="GUI\DBListView.Designer.cs">
+      <DependentUpon>DBListView.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\MeasurementView.cs">
       <SubType>UserControl</SubType>
     </Compile>
