implement multiple curves

--- a/simulator/DNP3/DNP3Commons/DNP3Commons.csproj
+++ b/simulator/DNP3/DNP3Commons/DNP3Commons.csproj
@@ -79,6 +79,8 @@
     <Compile Include="Configuration\Configuration.cs" />
     <Compile Include="Configuration\AnalogIndexMap.cs" />
     <Compile Include="Configuration\Counter.cs" />
+    <Compile Include="Curve.cs" />
+    <Compile Include="CurveCollection.cs" />
     <Compile Include="EventedOutstationApplication.cs" />
     <Compile Include="GUI\DBListView.cs">
       <SubType>Component</SubType>
