--- a/simulator/Simulator/Simulator.csproj
+++ b/simulator/Simulator/Simulator.csproj
@@ -192,6 +192,9 @@
     <Content Include="automatak.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy $(ProjectDir)..\DNP3\DEROutstationPlugin\config\indexes-config.json $(TargetDir)\config\</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
