move curve code to directory, add CurveException, initialize curve registers from configuration

--- a/simulator/DNP3/DNP3Commons/DNP3Commons.csproj
+++ b/simulator/DNP3/DNP3Commons/DNP3Commons.csproj
@@ -79,8 +79,9 @@
     <Compile Include="Configuration\Configuration.cs" />
     <Compile Include="Configuration\AnalogIndexMap.cs" />
     <Compile Include="Configuration\Counter.cs" />
-    <Compile Include="Curve.cs" />
-    <Compile Include="CurveCollection.cs" />
+    <Compile Include="Curve\Curve.cs" />
+    <Compile Include="Curve\CurveCollection.cs" />
+    <Compile Include="Curve\CurveException.cs" />
     <Compile Include="EventedOutstationApplication.cs" />
     <Compile Include="GUI\DBListView.cs">
       <SubType>Component</SubType>
