--- a/simulator/DNP3/DNP3Commons/DNP3Commons.csproj
+++ b/simulator/DNP3/DNP3Commons/DNP3Commons.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Curve\Curve.cs" />
     <Compile Include="Curve\CurveCollection.cs" />
     <Compile Include="Curve\CurveException.cs" />
+    <Compile Include="Curve\CurveLoader.cs" />
     <Compile Include="EventedOutstationApplication.cs" />
     <Compile Include="GUI\DBListView.cs">
       <SubType>Component</SubType>
