update post build command, update DEROutstation solution platform configuration

--- a/simulator/Simulator/Simulator.csproj
+++ b/simulator/Simulator/Simulator.csproj
@@ -193,7 +193,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy $(ProjectDir)..\DNP3\DEROutstationPlugin\config\indexes-config.json $(TargetDir)\config\</PostBuildEvent>
+    <PostBuildEvent>xcopy $(ProjectDir)..\DNP3\DEROutstationPlugin\config\indexes-config.json $(TargetDir)config\ /Y /r</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
