--- a/simulator/Simulator/Simulator.csproj
+++ b/simulator/Simulator/Simulator.csproj
@@ -166,6 +166,14 @@
       <Project>{67c09f7a-3dd4-4c02-aa3b-6882fb6ea816}</Project>
       <Name>Commons</Name>
     </ProjectReference>
+    <ProjectReference Include="..\DNP3\DerOutstationPlugin\DEROutstationPlugin.csproj">
+      <Project>{83698967-ff95-4383-818c-b70f9b5aeee2}</Project>
+      <Name>DEROutstationPlugin</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DNP3\DNP3PluginAPI\DNP3PluginAPI.csproj">
+      <Project>{a392b2a4-f62e-442c-813e-6b7f4bf63459}</Project>
+      <Name>DNP3PluginAPI</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DNP3\DNP3Simulator\DNP3Module.csproj">
       <Project>{2edbd258-1a19-4527-9c92-7418191bee87}</Project>
       <Name>DNP3Module</Name>
